--- a/vsExt/language-configuration.json
+++ b/vsExt/language-configuration.json
@@ -1,26 +1,30 @@
 {
-  "comments": {"lineComment": "#"},
-  "brackets": [[
-    "proc",
-    "const",
-    "in",
-    "end",
-    "dup",
-    "swap",
-    "puts",
-    "dump",
-    "syscall",
-    "syscall1",
-    "syscall2",
-    "syscall3",
-    "syscall4",
-    "syscall5",
-    "syscall6",
-    "i64",
-    "f64",
-    "str",
-    "bool"  
-  ]],
-  "autoClosingPairs": [{"open": "\"", "close": "\""}],
-  "surroundingPairs": [["\"", "\""]]
+  "comments": {
+    "lineComment": "#"
+  },
+  "brackets": [
+    ["(", ")"],
+    ["[", "]"]
+  ],
+  "autoClosingPairs": [
+    { "open": "\"", "close": "\"", "notIn": ["string"] },
+    { "open": "(", "close": ")" },
+    { "open": "[", "close": "]" }
+  ],
+  "surroundingPairs": [
+    ["\"", "\""],
+    ["(", ")"],
+    ["[", "]"]
+  ],
+  "wordPattern": "[a-zA-Z_][a-zA-Z0-9_]*|[+\\-*/%]|\\d+",
+  "indentationRules": {
+    "increaseIndentPattern": "^\\s*(proc|const)\\s+\\w+.*\\bin\\b\\s*$",
+    "decreaseIndentPattern": "^\\s*end\\s*$"
+  },
+  "folding": {
+    "markers": {
+      "start": "^\\s*(proc|const)\\s+",
+      "end": "^\\s*end\\s*$"
+    }
+  }
 }
